[metadata]
name = openbmp
summary = A Python BMP Receiver
license = Apache License 2.0
author = OpenBGP project team
author-email = penxiao@cisco.com
home-page = http://openbmp.github.io/
description-file = README.rst
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Operating System :: Unix
keywords =
    BGP
    SDN

[global]
setup-hooks =
    openbmp.hooks.setup_hook

[files]
packages =
    openbmp
data_files =
    etc/openbmp =
        etc/openbmp/openbmp.ini.sample
[entry_points]
console_scripts =
    openbmpd = openbmp.agent.cmd:main