[metadata]
name = yabmp
summary = A Python BMP Receiver
license = Apache License 2.0
author = SmartBGP project team
author-email = penxiao@cisco.com
home-page = http://smartbgp.github.io/
description-file = README.rst
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Operating System :: Unix
keywords =
    BGP
    SDN

[global]
setup-hooks =
    yabmp.hooks.setup_hook

[files]
packages =
    yabmp
data_files =
    etc/yabmp/yabmp.ini =
        etc/yabmp/yabmp.ini.sample
[entry_points]
console_scripts =
    yabmpd = yabmp.server:main